--- a/frontend/skin/bootstrap/components/bilet/css/bilet.css
+++ b/frontend/skin/bootstrap/components/bilet/css/bilet.css
@@ -1,12 +1,3 @@
-.t-bilet {
-    float: left;
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid #ddd;
-}
-.t-bilet-title{
-    font-size: 16px;
-}
-.t-bilet-count{
-    
+div.bilet {
+    min-width: 170px;
 }
